--- a/styles/zhtypo.sty
+++ b/styles/zhtypo.sty
@@ -1,7 +1,7 @@
 % xelatex 字体设定宏包(xelatex font settings for Chinese)
 % Tested under Mac OS X Snow Leopard(10.6.7) 
 
-\ProvidesPackage{zhfontcfg}
+\ProvidesPackage{zhtypo}
 \usepackage{fontspec,xunicode,xltxtra}
 \defaultfontfeatures{Mapping=tex-text} %如果没有它，会有一些 tex 特殊字符无法正常使用，比如连字符。
 
