--- a/template.tex
+++ b/template.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt]{article}
-    \usepackage{styles/zhfontcfg}
+    \usepackage{styles/zhtypo}
 
     \title{LaTeX 介绍}
     \author{维基百科}
@@ -41,7 +41,7 @@
         MS Office的域指令EQ支持部分类LATEX的格式，经测试可用于MS Office Word 2000、2002、2003、2007和2010。
 
         \subsection{XELATEX}
-        为了支持Unicode和现代字体，XELATEX被开发出来，其直接使用本地计算机中安装的字体的方法，大大降低了使用LATEX的难度。从效果看，生成的PDF文件与dvi文件相差不大。以下是XELATEX文件及其编译的pdf文件截图。
+        为了支持Unicode和现代字体，XELATEX被开发出来，其直接使用本地计算机中安装的字体的方法，大大降低了使用LATEX的难度。从效果看，生成的PDF文件与dvi文件相差不大。
 
     \section{趣味应用}
     由于LATEX是通过语法来排版的，任何想得到的东西，像是乐谱、棋谱（可动态）、化学结构式、电路图及物理学中的费曼图等等都可以先定义规则，然后再以简单的语法排版出来。
