--- a/styles/zhtypo.sty
+++ b/styles/zhtypo.sty
@@ -1,6 +1,3 @@
-% xelatex 字体设定宏包(xelatex font settings for Chinese)
-% Tested under Mac OS X Snow Leopard(10.6.7) 
-
 \ProvidesPackage{zhtypo}
 \usepackage{fontspec,xunicode,xltxtra}
 \defaultfontfeatures{Mapping=tex-text} %如果没有它，会有一些 tex 特殊字符无法正常使用，比如连字符。
@@ -17,33 +14,6 @@
 % 首行不缩进
 \setlength{\parindent}{0pt}
 
-%将系统字体名映射为逻辑字体名称，主要是为了维护的方便
-% You can use fc-list command to find what font are available in your system.
 \newcommand\fontnamedongqing{Hiragino Sans GB} % Mac 冬青简体
-\newcommand\fontnamehei{Heiti SC}
-\newcommand\fontnamesong{STSong}
-\newcommand\fontnamekai{STKaiti}
-\newcommand\fontnameroman{Times}
-
-% 设置你的默认字体
-\setmainfont{\fontnamedongqing} % set default font
-%\setmainfont[BoldFont=\fontnamehei]{\fontnamesong}
-%\setsansfont[BoldFont=\fontnamehei]{\fontnamekai}
-%\setmonofont{\fontnamemono}
-
-%冬青
-\newfontfamily\DONGQING{\fontnamedongqing}
-\newcommand{\dongqing}[1]{{\DONGQING #1}}
-%宋体
-\newfontfamily\SONG{\fontnamesong}
-\newcommand{\song}[1]{{\SONG #1}}
-%楷体
-\newfontfamily\KAI{\fontnamekai}
-\newcommand{\kai}[1]{{\KAI #1}}
-%黑体
-\newfontfamily\HEI{\fontnamehei}
-\newcommand{\hei}[1]{{\HEI #1}}
-%英文
-\newfontfamily\ENF{\fontnameroman}
-\newcommand{\en}[1]{\,{\ENF #1}\,}
-\newcommand{\EN}{\,\ENF\,}
+% 如果你电脑上没有 Hiragino Sans GB 可替换成你想要的字体
+\setmainfont{\fontnamedongqing} % 设置默认字体
